<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Título de Edición -->
        <TextView
            android:id="@+id/txtTituloEditarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_perfil"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edtUsuarioEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribeUsuario"
            android:textSize="14sp"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/email"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edtEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribeEmail"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/contrasena"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edtContrasenaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribeContrasena"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/repetirContrasena"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edtRepiteContrasenaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repiteContrasena"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/telefono"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edtTelefonoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribeTelefono"
            android:textSize="14sp"
            android:inputType="phone"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnActualizarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnCancelarEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/primary"
            android:text="@string/boton_cancelar"
            android:layout_marginBottom="24dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
