<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView

            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <TextView

            android:id="@+id/txtFechaIni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechaInicio" />

        <TextView

            android:id="@+id/txtFechaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechaFin" />

        <TextView

            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:inputType="phone"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView

            android:id="@+id/txtNoches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noches" />

        <TextView

            android:id="@+id/txtPrecioTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/precioTotal" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <Button

            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="X"
            android:backgroundTint="@color/primary" />

        <Button

            android:id="@+id/btnEditarReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:text="@string/editar"
            android:layout_marginLeft="10dp"/>

            </LinearLayout>

    </LinearLayout>

</LinearLayout>